<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.lanimall</groupId>
	<artifactId>MyFirstTerracottaCacheApp</artifactId>
	<version>1.0.0</version>
	<name>Terracotta EhCache Sample Application</name>
	<description>Terracotta Ehcache sample application</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <ehcache.version/>
        <toolkit.version/>
        <slf4j.version>1.7.1</slf4j.version>
    	<junit.version>4.6</junit.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>

		<!-- SLF4J -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.3.1</version>
                <configuration>
                    <platforms>
                        <platform>all</platform>
                    </platforms>
                    <configurationDirectory>conf</configurationDirectory>
                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                    <repositoryLayout>flat</repositoryLayout>
                    <useWildcardClassPath>true</useWildcardClassPath>
                    <extraJvmArguments>-Xms1g -Xmx2g -XX:MaxPermSize=512m
                        -XX:+UseParallelOldGC -XX:+UseCompressedOops
                        -XX:MaxDirectMemorySize=20G
                        -Dcom.tc.productkey.path=${user.home}/terracotta-license.key
                        -Dehcache.config.path=${net.sf.ehcache.configurationResourceName}
                        -Dtc.connect.url=tcvm:9510,tcvm:9610
                        -Dtc.cache.name=Customers
                    </extraJvmArguments>
                    <programs>
                        <program>
                            <mainClass>org.terracotta.utils.Launcher</mainClass>
                            <name>Launcher</name>
                        </program>
                    </programs>
                </configuration>
            </plugin>
		</plugins>
	</build>


    <profiles>
        <profile>
            <id>ehcache-2.6</id>
            <properties>
                <ehcache.version>2.6.8</ehcache.version>
                <toolkit.version>2.6.8</toolkit.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache3x.xml</net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-core-ee</artifactId>
                    <version>${ehcache.version}</version>
                </dependency>

                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-terracotta-ee</artifactId>
                    <version>${toolkit.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ehcache-2.7</id>
            <properties>
                <ehcache.version>2.7.5</ehcache.version>
                <toolkit.version>4.0.5</toolkit.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache4x.xml</net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-ee</artifactId>
                    <version>${ehcache.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                    <version>${toolkit.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ehcache-2.8</id>
            <properties>
                <ehcache.version>2.8.5</ehcache.version>
                <toolkit.version>4.1.5</toolkit.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache4x.xml</net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-ee</artifactId>
                    <version>${ehcache.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                    <version>${toolkit.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ehcache-2.9</id>
            <properties>
                <ehcache.version>2.9.1</ehcache.version>
                <toolkit.version>4.2.1</toolkit.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache4x.xml</net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-ee</artifactId>
                    <version>${ehcache.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                    <version>${toolkit.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ehcache-2.10-oss</id>
            <properties>
                <ehcache.version>2.10.0</ehcache.version>
                <toolkit.version>4.3.0</toolkit.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache4x-oss.xml</net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache</artifactId>
                    <version>${ehcache.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime</artifactId>
                    <version>${toolkit.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ehcache-2.10-ee</id>
            <properties>
                <ehcache.version>2.10.2.2.15</ehcache.version>
                <toolkit.version>4.3.2.2.15</toolkit.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache4x.xml
                </net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-ee</artifactId>
                    <version>${ehcache.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                    <version>${toolkit.version}</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

	<repositories>
		<repository>
			<id>terracotta-snapshots</id>
			<url>http://www.terracotta.org/download/reflector/snapshots</url>
		</repository>
		<repository>
			<id>terracotta-releases</id>
			<url>http://www.terracotta.org/download/reflector/releases</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>
</project>
